force-app/main/default/objects/Policy_Rule_Version__c/Policy_Rule_Version__c.object-meta.xml
<CustomObject>
    <label>Policy Rule Version</label>
    <pluralLabel>Policy Rule Versions</pluralLabel>
    <nameField>
        <label>Rule Version Name</label>
        <type>AutoNumber</type>
        <displayFormat>PRV-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Versioned business rules — data, not code. Maintained by analysts. Compound key (Rule_Code__c, Version_Number__c). Immutable once referenced by any Decision_Event__c. The governing set is resolved by effective date + active flag at evaluation time.</description>
</CustomObject>