force-app/main/default/objects/Policy_Rule_Version__c/fields/Allowed_Values__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Values__c</fullName>
    <label>Allowed Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>