force-app/main/default/objects/Policy_Rule_Version__c/fields/Change_Justification__c.field-meta.xml
<CustomField>
    <fullName>Change_Justification__c</fullName>
    <label>Change Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>