force-app/main/default/objects/Policy_Rule_Version__c/fields/DTI_Threshold__c.field-meta.xml
<CustomField>
    <fullName>DTI_Threshold__c</fullName>
    <description>Maximum debt-to-income ratio allowed under this policy version.</description>
    <inlineHelpText>The maximum DTI percentage a borrower may have to qualify.</inlineHelpText>
    <label>DTI Threshold</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>