force-app/main/default/objects/Policy_Rule_Version__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date this policy version becomes or became effective.</description>
    <inlineHelpText>The date on which this policy version takes effect.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>