force-app/main/default/objects/Policy_Rule_Version__c/fields/Fact_Field__c.field-meta.xml
<CustomField>
    <fullName>Fact_Field__c</fullName>
    <label>Fact Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>