force-app/main/default/objects/Policy_Rule_Version__c/fields/HITL_Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HITL_Confidence_Threshold__c</fullName>
    <description>AI confidence score threshold below which human-in-the-loop review is required.</description>
    <inlineHelpText>Decisions with AI confidence below this percentage require human review.</inlineHelpText>
    <label>HITL Confidence Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>