force-app/main/default/objects/Policy_Rule_Version__c/fields/HITL_Credit_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HITL_Credit_Threshold__c</fullName>
    <description>Credit score threshold below which human-in-the-loop review is required.</description>
    <inlineHelpText>Loans with credit scores below this value require human review.</inlineHelpText>
    <label>HITL Credit Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>