force-app/main/default/objects/Policy_Rule_Version__c/fields/Max_Loan_No_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_No_Escalation__c</fullName>
    <description>Maximum loan amount that can be approved without escalation.</description>
    <inlineHelpText>Loans above this amount require escalation to a senior approver.</inlineHelpText>
    <label>Max Loan No Escalation</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>