force-app/main/default/objects/Policy_Rule_Version__c/fields/Min_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Credit_Score__c</fullName>
    <description>Minimum credit score required for loan approval under this policy version.</description>
    <inlineHelpText>The minimum credit score a borrower must have to qualify.</inlineHelpText>
    <label>Min Credit Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>