force-app/main/default/objects/Policy_Rule_Version__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-text notes about this policy version.</description>
    <inlineHelpText>Additional notes or context about this policy version.</inlineHelpText>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>