force-app/main/default/objects/Policy_Rule_Version__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>LT</fullName><default>true</default><label>LT</label></value>
            <value><fullName>LTE</fullName><default>false</default><label>LTE</label></value>
            <value><fullName>GT</fullName><default>false</default><label>GT</label></value>
            <value><fullName>GTE</fullName><default>false</default><label>GTE</label></value>
            <value><fullName>EQ</fullName><default>false</default><label>EQ</label></value>
            <value><fullName>BETWEEN</fullName><default>false</default><label>BETWEEN</label></value>
            <value><fullName>IN_LIST</fullName><default>false</default><label>IN_LIST</label></value>
            <value><fullName>NOT_IN_LIST</fullName><default>false</default><label>NOT_IN_LIST</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>