force-app/main/default/objects/Policy_Rule_Version__c/fields/Override_Justification_Required__c.field-meta.xml
<CustomField>
    <fullName>Override_Justification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Justification Required</label>
    <type>Checkbox</type>
</CustomField>