force-app/main/default/objects/Policy_Rule_Version__c/fields/Override_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Override_Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Permitted</label>
    <type>Checkbox</type>
</CustomField>