force-app/main/default/objects/Policy_Rule_Version__c/fields/Rule_Category__c.field-meta.xml
<CustomField>
    <fullName>Rule_Category__c</fullName>
    <label>Rule Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INCOME</fullName>
                <default>true</default>
                <label>INCOME</label>
            </value>
            <value>
                <fullName>CREDIT</fullName>
            </value>
            <value>
                <fullName>COLLATERAL</fullName>
            </value>
            <value>
                <fullName>COMPLIANCE</fullName>
            </value>
            <value>
                <fullName>FRAUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>