force-app/main/default/objects/Policy_Rule_Version__c/fields/Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>Rule_Code__c</fullName>
    <externalId>true</externalId>
    <label>Rule Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>