force-app/main/default/objects/Policy_Rule_Version__c/fields/Rule_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Rule_Explanation__c</fullName>
    <label>Rule Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>