force-app/main/default/objects/Policy_Rule_Version__c/fields/Rule_Label__c.field-meta.xml
<CustomField>
    <fullName>Rule_Label__c</fullName>
    <label>Rule Label</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>