force-app/main/default/objects/Policy_Rule_Version__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HARD_DECLINE</fullName>
                <default>true</default>
                <label>HARD_DECLINE</label>
            </value>
            <value>
                <fullName>SOFT_DECLINE</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ADVISORY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>