force-app/main/default/objects/Policy_Rule_Version__c/fields/Superseded_By__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By__c</fullName>
    <description>Self-referential pointer to the replacement version</description>
    <inlineHelpText>The 18-character ID of the Policy Rule Version that supersedes this one.</inlineHelpText>
    <label>Superseded By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>