force-app/main/default/objects/Policy_Rule_Version__c/fields/Supersedes__c.field-meta.xml
<CustomField>
    <fullName>Supersedes__c</fullName>
    <label>Supersedes</label>
    <type>Lookup</type>
    <referenceTo>Policy_Rule_Version__c</referenceTo>
    <relationshipLabel>Supersedess</relationshipLabel>
    <relationshipName>Supersedes_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>