force-app/main/default/objects/Policy_Rule_Version__c/fields/Threshold_High__c.field-meta.xml
<CustomField>
    <fullName>Threshold_High__c</fullName>
    <label>Threshold High</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>