force-app/main/default/objects/Policy_Rule_Version__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>