force-app/main/default/objects/Policy_Rule_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>Sequential version identifier for policy rule snapshots.</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique version number for this policy rule version.</inlineHelpText>
    <label>Version Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>